display/src/css/styles.css
body, html {
    height: 100%vh
    min-height: 100vh;
    min-height: -webkit-fill-available;
    margin: 0;
    justify-content: center;
    align-items: center;
    background-color: black;
}
#content {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 100%
}

